finally fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body, html {
   font-family: 'Rock Salt', Arial, Helvetica, sans-serif;
   color: #2D3E50;
   height:100%;
+  background-color: #DADADA;
 }
 
 
@@ -126,12 +127,12 @@ a h2:hover {
 	.bio {
 		float:left;
 		height: 100%;
-		min-width: 29.25%;
+		min-width: 29%;
 		display: inline-block;
 	}
 	.projects {
 		float: right;
-		min-width: 70.6%;
+		min-width: 68%;
 		height: 100%;
 		overflow: auto;
 	}
